    * ADD: 'upgrade mode' - when there are LG firmware upgrade EPK files on USB stick in LG_DTV dir then some services get stopped and caches cleaned when needed - depends on file size to ensure no out-of-mem LG upgrade fail
    * UPDATE: tmux upgraded from 1.4 to 1.5 with use dynamic libncurses library instead of staticly linked code
    * UPDATE: busybox upgraded from 1.18.4(+passwd patch) to 1.19.2(+crond patch) with additional setserial, ubi*, users, groups, whois, pstree, pwdx,.. applets
    * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
    * CHANGE: improved cramfs xip partitions check before mounting - to prevent kernel crash in case of corrupted lgapp partition (RELEASE)
    * CHANGE: partition mounting based on partition names instead of static mtd numbers - this should improve compatibility even with unknown models
    * CHANGE: settings separated from rcS into /etc/rc.d/rc.settings
    * CHANGE: Internet Browser can be separated from WebUI (and proxied) with it's own NetCast icon in WebUI settings
    * CHANGE: increase Bluetooth transfer storage from 10MB to 50MB
    * CHANGE: support for OpenLGTV_BCM dir on any partition number on any of two USB ports in TV
    * CHANGE: installation is now being done via single installation file - OpenLGTV_BCM-vX.Y.Z.tar.sh
    * CHANGE: for safety reasons installation is now being done in chrooted virtual environment to ensure rootfs stability while flashing procedure
    * CHANGE: use konfabulator-exec.sh even for US models to give ability to run custom ywe from USB storage device
    * CHANGE: squashfs image is now being build with 256KB block size for better compression of partition image
    * CHANGE: bootlogd is now used for boot logging instead of ugly 'tee' redirections and 'date' timestamps
    * CHANGE: NetCast links are now organized in 6x6 grid instead of 4x6 as before and channel up/down arrows besides scrolling change focus now also