@@ -3,26 +3,56 @@
 # DirectFB config and libs preparation script for LG Broadcom platform based TVs by xeros
 # Source code released under GPL License
 
+LOCKFILE="/var/run/rc.directfb.lock"
+USBHID_CONNECTED_FILE="/var/run/usbhid.connected"
+DIRECTFBRC="/usr/local/etc/directfbrc"
+v_res=1280x720
+pid=`pgrep RELEASE | tail -n 1`
+
 echo "OpenLGTV_BCM-INFO: rc.directfb script starting..."
+if [ -f "$LOCKFILE" ]
+then
+    echo "OpenLGTV_BCM-WARN: another rc.directfb script instance is already handling action, exiting..."
+    exit 0
+fi
+
+echo "OpenLGTV_BCM-INFO: rc.directfb creating LOCKFILE: $LOCKFILE..."
+touch "$LOCKFILE"
+
+cursorupdates="no-cursor-updates"
+
 if [ "$netcast_keyboard_mouse_support" = "1" ]
 then
-    DIRECTFBRC="/usr/local/etc/directfbrc"
-    pid=`pgrep RELEASE | tail -n 1`
-    v_res=1280x720
-    v_start_hex=`cat /proc/${pid}/maps | grep "/dev/mem" | awk -F- '{ if(NR==3) printf("%s\n", $1) }'`
-    v_start_dec=`echo $((0x${v_start_hex}))`
-    v_end_hex=`cat /proc/${pid}/maps | grep "/dev/mem" | awk '{ if(NR==3) printf("%s\n", $1) }'| awk -F- '{ printf("%s\n", $2) }'`
-    v_end_dec=`echo $((0x${v_end_hex}))`
-    p_start_hex=`cat /proc/${pid}/maps | grep "/dev/mem" | awk '{ if(NR==3) printf("%s\n", $3) }'`
-    p_size_dec=`echo "${v_start_dec} ${v_end_dec}" | awk '{ printf("%d\n", $2-$1) }'`
-    echo "OpenLGTV_BCM-INFO: generating $DIRECTFBRC file..."
-    echo -e "# generated by rc.directfb\nsystem=devmem" > $DIRECTFBRC
-    echo -e "video-phys=${p_start_hex}\nvideo-length=${p_size_dec}" >> $DIRECTFBRC
-    echo -e "accelerator=147\nmode=${v_res}\ndepth=32\npixelformat=ARGB\nno-vt\nno-vt-switch\nno-quiet\nno-trace" >> $DIRECTFBRC
-    echo -e "#debug\n#desktop-buffer-mode=frontonly\n#desktop-buffer-mode=backsystem\ndesktop-buffer-mode=backvideo" >> $DIRECTFBRC
-    echo -e "#desktop-buffer-mode=auto\n#window-surface-policy=systemonly" >> $DIRECTFBRC
-    echo -e "log-file=/var/log/directfb.log\n#bg-none\nbg-color=0x00000000\ncursor-updates\ntmpfs=/dev/shm" >> $DIRECTFBRC
-    echo -e "no-sighandler\n#no-init-layer\n#disable-module=keyboard\nvsync-none\nno-linux-input-grab" >> $DIRECTFBRC
+    if [ "$1 $2" = "hotplug add" -o -f "$USBHID_CONNECTED_FILE" ]
+    then
+	cursorupdates="cursor-updates"
+    fi
+fi
+
+#v_start_hex=`cat /proc/${pid}/maps | grep "/dev/mem" | awk -F- '{ if(NR==3) printf("%s\n", $1) }'`
+v_start_hex=`grep "/dev/mem" /proc/${pid}/maps | awk -F- '{ if(NR==3) printf("%s\n", $1) }'`
+#v_start_dec=`echo $((0x${v_start_hex}))`
+v_start_dec="$((0x${v_start_hex}))"
+#v_end_hex=`cat /proc/${pid}/maps | grep "/dev/mem" | awk '{ if(NR==3) printf("%s\n", $1) }'| awk -F- '{ printf("%s\n", $2) }'`
+v_end_hex=`echo $v_start_hex | awk -F- '{ printf("%s\n", $2) }'`
+#v_end_dec=`echo $((0x${v_end_hex}))`
+v_end_dec="$((0x${v_end_hex}))"
+#p_start_hex=`cat /proc/${pid}/maps | grep "/dev/mem" | awk '{ if(NR==3) printf("%s\n", $3) }'`
+p_start_hex=`grep "/dev/mem" /proc/${pid}/maps | awk '{ if(NR==3) printf("%s\n", $3) }'`
+p_size_dec=`echo "${v_start_dec} ${v_end_dec}" | awk '{ printf("%d\n", $2-$1) }'`
+
+echo "OpenLGTV_BCM-INFO: generating $DIRECTFBRC file..."
+
+echo -e "# generated by rc.directfb\nsystem=devmem" > $DIRECTFBRC
+echo -e "video-phys=${p_start_hex}\nvideo-length=${p_size_dec}\naccelerator=147\nmode=${v_res}\ndepth=32\npixelformat=ARGB" >> $DIRECTFBRC
+echo -e "no-vt\nno-vt-switch\nno-quiet\nno-trace\n#debug\n#desktop-buffer-mode=frontonly\n#desktop-buffer-mode=backsystem" >> $DIRECTFBRC
+echo -e "desktop-buffer-mode=backvideo\n#desktop-buffer-mode=auto\n#window-surface-policy=systemonly" >> $DIRECTFBRC
+#echo -e "log-file=/var/log/directfb.log\n#bg-none\nbg-color=0x00000000\ncursor-updates\ntmpfs=/dev/shm" >> $DIRECTFBRC
+echo -e "log-file=/var/log/directfb.log\n#bg-none\nbg-color=0x00000000\n${cursorupdates}\ntmpfs=/dev/shm" >> $DIRECTFBRC
+echo -e "no-sighandler\n#no-init-layer\n#disable-module=keyboard\nvsync-none\nno-linux-input-grab" >> $DIRECTFBRC
+
+if [ "$netcast_keyboard_mouse_support" = "1" -a "$1" != "hotplug" ]
+then
     if [ -d "/mnt/browser/lib/directfb-1.2-0/inputdrivers" ]
     then
 	echo "OpenLGTV_BCM-INFO: found /mnt/browser/lib/directfb-1.2-0/inputdrivers dir - preparing libs config..."
@@ -35,11 +65,13 @@ then
 	fi
 	echo "OpenLGTV_BCM-INFO: linking /home/inputdrivers to /mnt/browser/lib/directfb-1.2-0/inputdrivers..."
 	mount --bind /home/inputdrivers /mnt/browser/lib/directfb-1.2-0/inputdrivers
-	echo "OpenLGTV_BCM-INFO: terminating browser process - lb4wk (you may ignore error if its not running)..."
-	killall lb4wk
     else
 	echo "OpenLGTV_BCM-WARN: /mnt/browser/lib/directfb-1.2-0/inputdrivers dir NOT FOUND - skipping libs config..."
     fi
-else
-    echo "OpenLGTV_BCM-INFO: rc.directfb - not touching DirectFB configuration..."
 fi
+
+echo "OpenLGTV_BCM-INFO: terminating web browser process - lb4wk (you may ignore error if its not running)..."
+killall lb4wk
+
+echo "OpenLGTV_BCM-INFO: rc.directfb removing LOCKFILE: $LOCKFILE..."
+rm -f "$LOCKFILE"
